# fusioncore

./: .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/ISSUE_TEMPLATE/: feature_request.md  hardware_config_request.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: .gitignore  README.md  run_all.sh  run_one.sh
benchmarks/nclt/2012-01-08/results/: BENCHMARK.md  OUTAGE_TEST.md  README.md  SPIKE_TEST.md
benchmarks/nclt/2012-02-04/results/: BENCHMARK.md
benchmarks/nclt/2012-03-31/results/: BENCHMARK.md
benchmarks/nclt/2012-08-20/results/: BENCHMARK.md
benchmarks/nclt/2012-11-04/results/: BENCHMARK.md
benchmarks/nclt/2013-02-23/results/: BENCHMARK.md
compass_msgs/: package.xml
configuration/: index.html
demo/: README.md  make_demo_bag.py  nclt_demo.launch.py  run_demo.sh
docs/: configuration.md  getting-started.md  how-it-works.md  index.md  known-limitations.md  migration_from_robot_localization.md  nav2.md  support.md  troubleshooting.md  vs-robot-localization.md
docs/hardware/: ackermann.md  environment-presets.md  icp-indoor.md  index.md  wheels-indoor.md
docs/overrides/: main.html
docs/reference/: benchmark.md  topics.md
fusioncore_core/: CMakeLists.txt  package.xml
fusioncore_core/include/fusioncore/: fusioncore.hpp  state.hpp  ukf.hpp
fusioncore_core/include/fusioncore/sensors/: gnss.hpp  imu.hpp
fusioncore_core/src/: fusioncore.cpp  ukf.cpp
fusioncore_core/tests/: CMakeLists.txt  test_fusioncore.cpp  test_gnss.cpp  test_gnss_manager.cpp  test_magnetometer.cpp  test_ukf.cpp
fusioncore_datasets/: package.xml
fusioncore_datasets/config/: navsat_transform.yaml  nclt_fusioncore.yaml  rl_ekf.yaml  rl_ukf.yaml
fusioncore_datasets/launch/: nclt_benchmark.launch.py
fusioncore_datasets/scripts/: nclt_player.py
fusioncore_gazebo/: CMakeLists.txt  package.xml
fusioncore_gazebo/config/: demo_comparison.rviz  fusioncore_gazebo.yaml  robot_localization.yaml
fusioncore_gazebo/launch/: benchmark.launch.py  benchmark_runner.py  demo_comparison.launch.py  fusioncore_demo.launch.py  fusioncore_gazebo.launch.py  gz_pose_to_gps.py
fusioncore_gazebo/scripts/: drive_circle.py  path_recorder.py
fusioncore_husky_test/: CMakeLists.txt  README.md  package.xml
fusioncore_husky_test/config/: husky_fusioncore.yaml  robot.yaml
fusioncore_husky_test/launch/: fusioncore_husky.launch.py
fusioncore_ros/: CMakeLists.txt  package.xml
fusioncore_ros/config/: bno085_custom.yaml  clearpath_husky.yaml  differential_drive_basic.yaml  duatic_mecanum.yaml  env_canopy.yaml  env_open.yaml  env_urban.yaml  f1tenth_indoor.yaml  fusioncore.yaml  nav2_params.yaml  outdoor_gnss_dual_antenna.yaml  van_outdoor_gps.yaml  wheels_indoor.yaml
fusioncore_ros/launch/: fusioncore.launch.py  fusioncore_nav2.launch.py
fusioncore_ros/msg/: FilterHealth.msg
fusioncore_ros/src/: fusion_node.cpp
fusioncore_ros/tests/: test_proj_axis_order.cpp
getting-started/: index.html
hardware/: index.html
hardware/environment-presets/: index.html
how-it-works/: index.html
migration_from_robot_localization/: index.html
nav2/: index.html
reference/architecture/: index.html
reference/benchmark/: index.html
reference/topics/: index.html
search/: search_index.json
simulation/: index.html
tools/: demo_quick.py  evaluate.py  evaluate_outage.py  evaluate_spike.py  fusioncore_gcs.py  make_figures.py  nclt_gt_to_tum.py  nclt_rtk_to_tum.py  plot_benchmark.py  spike_injector.py
