<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusioncore_husky</name>
  <version>0.0.0</version>
  <description>
    FusionCore sensor fusion demo for the Clearpath Husky A200.
    Fuses wheel odometry, Microstrain IMU, and u-blox F9P GPS using a UKF.
  </description>
  <maintainer email="manan.kharwar@ansys.com">Manan Kharwar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>fusioncore_ros</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
